--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,8 @@ project(woop)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE FORCE)
 set(CMAKE_CXX_STANDARD 17 FORCE)
 
+set(WOOP_ENABLE_LOGGING TRUE CACHE BOOL "Whether to log messages to standard output streams")
+set(WOOP_COLOR_LOGGING TRUE CACHE BOOL "Whether to enable colorful log messages")
+
 add_subdirectory(thirdparty)
 add_subdirectory(src)
