--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,3 +12,9 @@ target_link_libraries(woop_tests PRIVATE
 
 include(GoogleTest)
 gtest_discover_tests(woop_tests)
+
+# Copy wads (required by some tests)
+file(
+  COPY "${CMAKE_CURRENT_SOURCE_DIR}/wads" 
+  DESTINATION "${CMAKE_CURRENT_BINARY_DIR}"
+)
