--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,9 @@ add_executable(woop
 target_link_libraries(woop PRIVATE
   woop_core
 )
+
+# Copy assets
+file(
+  COPY "${CMAKE_SOURCE_DIR}/assets" 
+  DESTINATION "${CMAKE_CURRENT_BINARY_DIR}"
+)
