Added config parsing
The renderer now parses a configuration file (config.toml) upon starting. Most options are directly exposed from their C++ counterparts.

Fixed a bug where shaders were not properly initialized, occasionally causing a crash because of invalid usage.

Updated config defaults.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,15 +2,25 @@ add_subdirectory(core)
 
 add_executable(woop
   main.cpp
+  config.cpp
 )
 
 target_link_libraries(woop PRIVATE
   woop_core
+  tomlplusplus::tomlplusplus
 )
 
 # Copy assets
 add_custom_command(
-        TARGET woop POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-                ${CMAKE_SOURCE_DIR}/assets
-                ${CMAKE_CURRENT_BINARY_DIR}/assets)
+  TARGET woop POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy_directory
+          ${CMAKE_SOURCE_DIR}/assets
+          ${CMAKE_CURRENT_BINARY_DIR}/assets
+)
+# Copy configuration
+add_custom_command(
+  TARGET woop POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy 
+          ${CMAKE_SOURCE_DIR}/config.toml
+          ${CMAKE_CURRENT_BINARY_DIR}/config.toml
+)
